--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
         <section class="about-section" id="sobre-maria">
             <div class="container about-container">
                 <div class="about-image animate-on-scroll">
-                    <img src="img_geral/Foto_Sobre_Maria_BJ.jpg" alt="Foto de Maria" loading="lazy" decoding="async">
+                    <img src="img_geral/Maria_Foto.png" alt="Foto de Maria" loading="lazy" decoding="async">
                 </div>
                 <div class="about-text">
                     <div class="section-title-wrapper animate-on-scroll"> <h2 class="section-title">Sobre Mim</h2> </div>
